# universal-storefront

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  smoke_test.py  test_db.py
.github/workflows/: tests.yml
notes/: imporant on every stage  poetry_library_etc.txt  pytest.txt  some imporant scripts
src/: app.py  application.py  database.py
src/database/: database.py  db_utils.py
src/database/sql/: schema.sql  seed.sql  variables_for_tests.sql
src/static/: style.css
src/templates/: dashboard.html  login.html  register.html
tests/: conftest.py  test_db.py  test_getusers.py
tests/api/: conftest.py  test_movie_api.py  test_users_api.py
tests/database/: conftest.py  test_access.py  test_movie.py  test_user.py  test_user_persistance.py
tests/e2e/: conftest.py  test_auth.py  test_login.py  test_register.py  test_upgrade.py
tests/e2e/pages/: dashboard_page.py  login_page.py  register_page.py
